tests/scan/fixtures/validation/negative/clean_go_typosquat_unique/go.mod
module github.com/example/zzz-marker-go-negative

go 1.21

require github.com/stretchr/testify v1.8.0
